# dome

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  install.sh  justfile
.github/: FUNDING.yml
.github/workflows/: ci.yml  deploy-www.yml  publish-crates.yml  publish-sdk.yml  release.yml
crates/dome-audit/: Cargo.toml
crates/dome-audit/src/: event.rs  framer.rs  lib.rs  reap.rs  redact.rs  writer.rs
crates/dome-cli/: Cargo.toml
crates/dome-cli/src/: assets.rs  checkpoint.rs  cli.rs  config.rs  daemon.rs  gc.rs  hook.rs  lock.rs  main.rs  provision.rs  retention.rs  sandbox.rs  sandbox_config.rs  session.rs  stdio.rs  trust.rs  vm.rs  worker.rs
crates/dome-cli/tests/: auto_activation.rs  container_ca_propagation.rs  container_egress_policy.rs  container_kernel.rs  container_registry_allowlist.rs  container_sandbox_parity.rs  daemon.rs  guest_shell.rs  hook_shell.rs  hook_shell_parity.rs  multi_attach.rs  provision.rs  rw_mounts.rs  sandbox_config.rs  sandbox_lifecycle.rs  sandbox_ls.rs  sandbox_persist.rs  sandbox_save.rs  sandbox_seed.rs  worker_attach.rs
crates/dome-darwin/: Cargo.toml
crates/dome-darwin/src/: bootloader.rs  configuration.rs  entropy.rs  error.rs  memory.rs  network.rs  serial.rs  socket.rs  storage.rs  terminal.rs
crates/dome-darwin/src/sys/: queue.rs
crates/dome-guest/: Cargo.toml
crates/dome-guest/src/: main.rs
crates/dome-linux/: Cargo.toml
crates/dome-linux/src/: bootloader.rs  configuration.rs  directory_sharing.rs  entropy.rs  error.rs  lib.rs  memory_balloon.rs  network.rs  serial.rs  socket.rs  terminal.rs  vm.rs
crates/dome-linux/src/kvm/: devices.rs  mod.rs  virtio_fs.rs
crates/dome-proto/: Cargo.toml
crates/dome-proto/src/: control.rs  frame.rs  lib.rs
crates/dome-proxy/: Cargo.toml
crates/dome-proxy/src/: config.rs  device.rs  dns.rs  lib.rs  proxy.rs  stack.rs  stream.rs  tls.rs
crates/dome-sdk/: Cargo.toml
crates/dome-sdk/src/: lib.rs
crates/dome-store/: Cargo.toml
crates/dome-store/src/: backend.rs  cas.rs  lib.rs
crates/dome-vm/: Cargo.toml
crates/dome-vm/src/: client.rs  lib.rs  sandbox.rs
crates/shuru-cli/: Cargo.toml
crates/shuru-cli/src/: assets.rs  checkpoint.rs  cli.rs  config.rs  main.rs  stdio.rs  vm.rs
crates/shuru-cli/tests/: rw_mounts.rs
crates/shuru-darwin/: Cargo.toml
crates/shuru-darwin/src/: directory_sharing.rs  lib.rs  vm.rs
crates/shuru-guest/: Cargo.toml
crates/shuru-guest/src/: main.rs
crates/shuru-linux/: Cargo.toml
crates/shuru-linux/src/: storage.rs  vm.rs
crates/shuru-linux/src/kvm/: devices.rs  layout.rs  mod.rs
crates/shuru-proto/: Cargo.toml
crates/shuru-proto/src/: frame.rs  lib.rs
crates/shuru-proxy/: Cargo.toml
crates/shuru-proxy/src/: config.rs  device.rs  dns.rs  lib.rs  proxy.rs  tls.rs
crates/shuru-sdk/: Cargo.toml
crates/shuru-sdk/src/: lib.rs
crates/shuru-store/: Cargo.toml
crates/shuru-store/src/: backend.rs  cas.rs  lib.rs  nbd.rs
crates/shuru-vm/: Cargo.toml
crates/shuru-vm/src/: lib.rs  sandbox.rs
kernel/: dome_defconfig
scripts/: build-kernel.sh  prepare-rootfs.sh
skills/dome/: SKILL.md
skills/dome/references/: checkpoints.md  config.md  container-runtimes.md  networking.md
skills/shuru/: SKILL.md
skills/shuru/references/: config.md
www/: package.json
www/src/components/landing/: CliSection.astro  Footer.astro  GetStartedSection.astro  HeroSection.astro  Nav.astro
www/src/layouts/: Layout.astro
www/src/pages/: linux.astro
www/src/pages/blog/: experimental-linux-builds.astro  local-sandbox-and-execution-layer-for-autonomous-agents.astro
