[workspace]
resolver = "2"
members = [
    "crates/shuru-cli",
    "crates/shuru-darwin",
    "crates/shuru-proto",
    "crates/shuru-proxy",
    "crates/shuru-sdk",
    "crates/shuru-vm",
    "crates/shuru-store",
    "crates/shuru-guest",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
