[workspace]
resolver = "2"
members = [
    "crates/dome-audit",
    "crates/dome-cli",
    "crates/dome-darwin",
    "crates/dome-linux",
    "crates/dome-proto",
    "crates/dome-proxy",
    "crates/dome-sdk",
    "crates/dome-vm",
    "crates/dome-store",
    "crates/dome-guest",
]
# dome-darwin and dome-linux are platform-specific — only pulled in
# transitively via dome-vm's cfg'd deps. Excluded from default builds
# so `cargo check` doesn't fail on the wrong OS.
default-members = [
    "crates/dome-audit",
    "crates/dome-cli",
    "crates/dome-proto",
    "crates/dome-proxy",
    "crates/dome-sdk",
    "crates/dome-vm",
    "crates/dome-store",
    "crates/dome-guest",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
