[package]
name = "dome-audit"
version = "0.1.0"
edition = "2021"
description = "Egress audit log for dome sandboxes (event types, JSONL writer, durability)"
license = "Apache-2.0"
repository = "https://github.com/mhjmaas/dome"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }
httparse = "1"

[dev-dependencies]
tempfile = "3"
