[package]
name = "dome-cli"
version = "0.6.3"
edition = "2021"

[[bin]]
name = "dome"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"
dome-store = { path = "../dome-store" }

[dependencies]
dome-vm = { path = "../dome-vm" }
dome-proto = { path = "../dome-proto" }
dome-proxy = { path = "../dome-proxy" }
dome-store = { path = "../dome-store" }
blake3 = "1"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
libc = "0.2"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4.45"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = { version = "3", features = ["json"] }
base64 = "0.22.1"
