[package]
name = "dome-darwin"
version = "0.1.1"
edition = "2021"
description = "Virtualization.framework bindings for dome"
license = "Apache-2.0"
repository = "https://github.com/mhjmaas/dome"

[dependencies]
block2 = "0.6"
crossbeam-channel = "0.5"
dispatch2 = "0.3"
libc = "0.2"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSString",
    "NSURL",
    "NSArray",
    "NSError",
    "NSFileHandle",
    "NSKeyValueObserving",
    "NSDictionary",
    "NSObject",
    "NSObjCRuntime",
] }
objc2-virtualization = { version = "0.3", features = [
    "dispatch2",
    "VZFileHandleNetworkDeviceAttachment",
    "VZNetworkBlockDeviceStorageDeviceAttachment",
] }

