[package]
name = "dome-guest"
version = "0.3.5"
edition = "2021"

[[bin]]
name = "dome-guest"
path = "src/main.rs"

[dependencies]
dome-proto = { path = "../dome-proto" }
libc = "0.2"
serde_json = "1"
ureq = { version = "3", default-features = false, features = ["rustls"] }
flate2 = "1"
tar = "0.4.45"
ignore = "0.4"
notify = "7"
