[package]
name = "dome-sdk"
version = "0.3.6"
edition = "2021"
description = "Async Rust SDK for Dome microVMs"
license = "Apache-2.0"
repository = "https://github.com/mhjmaas/dome"

[features]
default = []
cas = ["dome-store", "blake3"]

[dependencies]
dome-vm = { version = "0.3.4", path = "../dome-vm" }
dome-proto = { version = "0.3.3", path = "../dome-proto" }
dome-proxy = { version = "0.2.4", path = "../dome-proxy" }
dome-store = { version = "0.1.1", path = "../dome-store", optional = true }
tokio = { version = "1", features = ["sync"] }
anyhow = "1"
blake3 = { version = "1", optional = true }
libc = "0.2"
tracing = "0.1"
