[package]
name = "dome-vm"
version = "0.3.6"
edition = "2021"
description = "High-level VM management for dome"
license = "Apache-2.0"
repository = "https://github.com/mhjmaas/dome"

[dependencies]
dome-proto = { version = "0.3.3", path = "../dome-proto" }
anyhow = "1"
crossbeam-channel = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
socket2 = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
dome-darwin = { version = "0.1.1", path = "../dome-darwin" }
[target.'cfg(target_os = "linux")'.dependencies]
dome-linux = { version = "0.2.0", path = "../dome-linux" }
