[package]
name = "shuru-cli"
version = "0.5.4"
edition = "2021"

[[bin]]
name = "shuru"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"

[dependencies]
shuru-vm = { path = "../shuru-vm" }
shuru-proto = { path = "../shuru-proto" }
shuru-proxy = { path = "../shuru-proxy" }
shuru-store = { path = "../shuru-store" }
blake3 = "1"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
libc = "0.2"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = { version = "3", features = ["json"] }
base64 = "0.22.1"
