[package]
name = "shuru-guest"
version = "0.3.3"
edition = "2021"

[[bin]]
name = "shuru-guest"
path = "src/main.rs"

[dependencies]
shuru-proto = { path = "../shuru-proto" }
libc = "0.2"
serde_json = "1"
ureq = { version = "3", default-features = false, features = ["rustls"] }
flate2 = "1"
tar = "0.4"
ignore = "0.4"
notify = "7"
