[package]
name = "shuru-sdk"
version = "0.3.6"
edition = "2021"
description = "Async Rust SDK for Shuru microVMs"
license = "Apache-2.0"
repository = "https://github.com/superhq-ai/shuru"

[features]
default = []
cas = ["shuru-store", "blake3"]

[dependencies]
shuru-vm = { version = "0.3.4", path = "../shuru-vm" }
shuru-proto = { version = "0.3.3", path = "../shuru-proto" }
shuru-proxy = { version = "0.2.4", path = "../shuru-proxy" }
shuru-store = { version = "0.1.1", path = "../shuru-store", optional = true }
tokio = { version = "1", features = ["sync"] }
anyhow = "1"
blake3 = { version = "1", optional = true }
libc = "0.2"
tracing = "0.1"
