[package]
name = "shuru-vm"
version = "0.3.4"
edition = "2021"
description = "High-level VM management for shuru"
license = "Apache-2.0"
repository = "https://github.com/superhq-ai/shuru"

[dependencies]
shuru-proto = { version = "0.3.3", path = "../shuru-proto" }
anyhow = "1"
crossbeam-channel = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
socket2 = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
shuru-darwin = { version = "0.1.1", path = "../shuru-darwin" }
[target.'cfg(target_os = "linux")'.dependencies]
shuru-linux = { version = "0.1.0", path = "../shuru-linux" }
